--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,22 +1,24 @@
-// For format details, see https://containers.dev/implementors/json_reference/
 {
-    "name": "Python 3 Developer Container",
-    "build": {
-        "dockerfile": "../Dockerfile",
-        "target": "developer"
-    },
+    "name": "Python 3 Developer Container setup with Redis and RabbitMQ",
+    "dockerComposeFile": [
+        "../docker-compose.yml",
+        "docker-compose.extend.yml"
+    ],
+    "service": "blue-h11g",
+    "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
+    "shutdownAction": "stopCompose",
     "remoteEnv": {
         // Allow X11 apps to run inside the container
         "DISPLAY": "${localEnv:DISPLAY}"
     },
     "customizations": {
         "vscode": {
-            // Set *default* container specific settings.json values on container create.
             "settings": {
                 "python.defaultInterpreterPath": "/venv/bin/python"
             },
-            // Add the IDs of extensions you want installed when the container is created.
             "extensions": [
+                "streetsidesoftware.code-spell-checker",
+                "dbaeumer.vscode-eslint",
                 "ms-python.python",
                 "github.vscode-github-actions",
                 "tamasfe.even-better-toml",
@@ -27,20 +29,15 @@
             ]
         }
     },
-    "features": {
-        // add in eternal history and other bash features
-        "ghcr.io/diamondlightsource/devcontainer-features/bash-config:1.0.0": {}
-    },
-    // Create the config folder for the bash-config feature
-    "initializeCommand": "mkdir -p ${localEnv:HOME}/.config/bash-config",
-    "runArgs": [
-        // Allow the container to access the host X11 display and EPICS CA
-        "--net=host",
-        // Make sure SELinux does not disable with access to host filesystems like tmp
-        "--security-opt=label=disable"
+    "forwardPorts": [
+        3000
     ],
-    // Mount the parent as /workspaces so we can pip install peers as editable
-    "workspaceMount": "source=${localWorkspaceFolder}/..,target=/workspaces,type=bind",
-    // After the container is created, install the python project in editable form
-    "postCreateCommand": "pip install $([ -f dev-requirements.txt ] && echo '-c dev-requirements.txt') -e '.[dev]' && pre-commit install"
+    // Allow the container to access the host X11 display and EPICS CA
+    // "--net=host",
+    "initializeCommand": "bash -c 'for i in $HOME/.inputrc; do [ -f $i ] || touch $i; done'",
+    "mounts": [
+        "source=${localEnv:HOME}/.ssh,target=/root/.ssh,type=bind",
+        "source=${localEnv:HOME}/.inputrc,target=/root/.inputrc,type=bind"
+    ]
+    // "postCreateCommand": "bash -i scripts/install-dependencies.sh"
 }
