--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,19 +11,19 @@ services:
       - 8000:8000
     depends_on:
       - dragonfly
-      # - rmq
+      - rmq
     network_mode: service:dragonfly
-  # rmq:
-  #   image: 'docker.io/bitnami/rabbitmq:4.1.0-debian-12-r0'
-  #   ports:
-  #     - 5672:5672
-  #     - 15672:15672
-  #   environment:
-  #     RABBITMQ_DEFAULT_USER: user
-  #     RABBITMQ_DEFAULT_PASS: password
-  #     RABBITMQ_DEFAULT_VHOST: /
-  #   volumes:
-  #     - rabbitmqdata:/bitnami/rabbitmq
+  rmq:
+    image: 'docker.io/bitnami/rabbitmq:4.1.0-debian-12-r0'
+    ports:
+      - 5672:5672
+      - 15672:15672
+    environment:
+      RABBITMQ_DEFAULT_USER: user
+      RABBITMQ_DEFAULT_PASS: password
+      RABBITMQ_DEFAULT_VHOST: /
+    volumes:
+      - rabbitmqdata:/bitnami/rabbitmq
   dragonfly:
     image: 'docker.dragonflydb.io/dragonflydb/dragonfly'
     ulimits:
@@ -38,9 +38,9 @@ services:
       - dragonflydata:/data
 volumes:
   dragonflydata:
-  # rabbitmqdata:
-  #   driver: local
-  #   driver_opts:
-  #     type: none
-  #     device: /tmp/rabbitmqdata
-  #     o: bind
+  rabbitmqdata:
+    driver: local
+    driver_opts:
+      type: none
+      device: /tmp/rabbitmqdata
+      o: bind
