--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,14 +14,18 @@ services:
       - rmq
     network_mode: service:dragonfly
   rmq:
+    security_opt:
+      - label=disable
     image: 'docker.io/bitnami/rabbitmq:4.1.0-debian-12-r0'
     ports:
-      - 5672:5672
-      - 15672:15672
+      - 5672:5672     # AMQP
+      - 15672:15672   # Management UI
+      - 61613:61613   # STOMP protocol port (default)
     environment:
       RABBITMQ_DEFAULT_USER: user
       RABBITMQ_DEFAULT_PASS: password
       RABBITMQ_DEFAULT_VHOST: /
+      RABBITMQ_ENABLED_PLUGINS: "rabbitmq_management rabbitmq_stomp"
     volumes:
       - rabbitmqdata:/bitnami/rabbitmq
   dragonfly:
