--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,11 +12,12 @@ services:
     depends_on:
       - dragonfly
       - rmq
-    network_mode: service:dragonfly
+    # network_mode: service:dragonfly
   rmq:
     security_opt:
       - label=disable
     image: 'docker.io/bitnami/rabbitmq:4.1.0-debian-12-r0'
+    # image: 'docker.io/bitnami/rabbitmq:4.1.0-management'
     ports:
       - 5672:5672     # AMQP
       - 15672:15672   # Management UI
@@ -24,12 +25,14 @@ services:
     environment:
       RABBITMQ_DEFAULT_USER: user
       RABBITMQ_DEFAULT_PASS: password
+      RABBITMQ_USERNAME: user2
+      RABBITMQ_PASSWORD: password
       RABBITMQ_DEFAULT_VHOST: /
-      RABBITMQ_ENABLED_PLUGINS: "rabbitmq_management rabbitmq_stomp"
+      RABBITMQ_ENABLED_PLUGINS: rabbitmq_management rabbitmq_stomp
     volumes:
       - rabbitmqdata:/bitnami/rabbitmq
-      - ./rmq/rabbitmq.conf:/opt/bitnami/rabbitmq/etc/rabbitmq/rabbitmq.conf:ro
-      - ./rmq/enabled_plugins:/opt/bitnami/rabbitmq/etc/rabbitmq/enabled_plugins:ro
+      # - ./rmq/rabbitmq.conf:/opt/bitnami/rabbitmq/etc/rabbitmq/rabbitmq.conf:ro
+      # - ./rmq/enabled_plugins:/opt/bitnami/rabbitmq/etc/rabbitmq/enabled_plugins:ro
   dragonfly:
     image: 'docker.dragonflydb.io/dragonflydb/dragonfly'
     ulimits:
