--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,9 @@ dependencies = [
     "fastapi",
     "bluesky-stomp",
     "h5py",
+    "httpx",
     "jsonschema",
+    "msgpack",
     "ophyd-async",
     "pydantic",
     "pydantic-settings",
